--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -1,5 +1,19 @@
 name: Eleventy Build
-on: [push]
+
+on:
+  push:
+    branches: 
+      - main
+      - switch-to-eleventy
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   build_deploy:
