--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Build
         uses: cjerrington/actions-eleventy@master
       - name: Deploy
+        id: deployment
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: _site
