--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "description": "",
   "dependencies": {
     "@11ty/eleventy": "^3.1.2"
+  },
+  "devDependencies": {
+    "pagefind": "^1.3.0"
   }
 }
