--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "eleventy",
-    "serve": "eleventy --serve"
+    "serve": "rimraf _site && eleventy --serve"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "@11ty/eleventy": "^3.1.2"
   },
   "devDependencies": {
-    "pagefind": "^1.3.0"
+    "pagefind": "^1.3.0",
+    "rimraf": "^6.0.1"
   }
 }
