--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "eleventy",
-    "serve": "rimraf _site && eleventy --serve"
+    "build": "tsx ./node_modules/.bin/eleventy --config eleventy.config.ts",
+    "serve": "rimraf _site && npm run build -- --serve"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,13 @@
   "homepage": "https://github.com/mfillmer/mfillmer.github.io#readme",
   "description": "",
   "dependencies": {
-    "@11ty/eleventy": "^3.1.2"
+    "@11ty/eleventy": "^3.1.2",
+    "11ty.ts": "^0.0.6"
   },
   "devDependencies": {
+    "@types/node": "^24.1.0",
     "pagefind": "^1.3.0",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "tsx": "^4.20.3"
   }
 }
