--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   "description": "",
   "dependencies": {
     "@11ty/eleventy": "^3.1.2",
-    "11ty.ts": "^0.0.6"
+    "11ty.ts": "^0.0.6",
+    "markdown-it": "^14.1.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^24.1.0",
     "pagefind": "^1.3.0",
     "rimraf": "^6.0.1",
