--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "editor.tabSize": 2
+    "editor.tabSize": 2,
+    "tailwindCSS.includeLanguages": {
+        "njk": "html",
+        "Nunjucks": "html"
+    }
+   
 }
