--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@11ty/eleventy": "^3.1.2",
     "11ty.ts": "^0.0.6",
     "markdown-it": "^14.1.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^24.1.0",
+    "@types/react": "^19.1.9",
     "pagefind": "^1.3.0",
+    "react-dom": "^19.1.1",
     "rimraf": "^6.0.1",
     "tsx": "^4.20.3"
   }
