--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "pagefind:index": "pagefind --site _site --glob \"**/*.html\"",
     "eleventy:build": "tsx ./node_modules/.bin/eleventy --config eleventy.config.ts",
     "build": "npm run eleventy:build && npm run pagefind:index",
-    "serve": "rimraf _site && npm run build && npm run eleventy:build -- --serve"
+    "serve": "rimraf _site && npm run build && npm run eleventy:build -- --serve",
+    "storybook:serve": "storybook dev -p 6006",
+    "storybook:build": "storybook build"
   },
   "repository": {
     "type": "git",
@@ -28,12 +30,16 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@storybook/html-vite": "^9.1.1",
+    "@storybook/react": "^9.1.1",
+    "@storybook/react-vite": "^9.1.1",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
     "pagefind": "^1.3.0",
     "react-dom": "^19.1.1",
     "rimraf": "^6.0.1",
+    "storybook": "^9.1.1",
     "tsx": "^4.20.3"
   }
 }
