--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "description": "",
   "dependencies": {
     "@11ty/eleventy": "^3.1.2",
+    "@11ty/eleventy-plugin-vite": "^7.0.0",
     "11ty.ts": "^0.0.6",
     "markdown-it": "^14.1.0",
     "slugify": "^1.6.6",
@@ -36,7 +37,9 @@
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "pagefind": "^1.3.0",
+    "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "rimraf": "^6.0.1",
     "storybook": "^9.1.1",
