--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
   "dependencies": {
     "@11ty/eleventy": "^3.1.2",
     "@11ty/eleventy-plugin-vite": "^7.0.0",
+    "@tailwindcss/postcss": "^4.1.12",
     "11ty.ts": "^0.0.6",
     "markdown-it": "^14.1.0",
+    "postcss": "^8.5.6",
     "slugify": "^1.6.6",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@storybook/html-vite": "^9.1.1",
