--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@storybook/html-vite": "^9.1.1",
     "@storybook/react": "^9.1.1",
     "@storybook/react-vite": "^9.1.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
