--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "dependencies": {
     "@11ty/eleventy": "^3.1.2",
     "@11ty/eleventy-plugin-vite": "^7.0.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/postcss": "^4.1.12",
     "11ty.ts": "^0.0.6",
     "class-variance-authority": "^0.7.1",
@@ -52,6 +55,7 @@
     "react-dom": "^19.1.1",
     "rimraf": "^6.0.1",
     "storybook": "^9.1.1",
-    "tsx": "^4.20.3"
+    "tsx": "^4.20.3",
+    "vite": "^7.1.3"
   }
 }
