--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "pagefind:index": "pagefind --site _site --glob \"**/*.html\"",
     "eleventy:build": "tsx ./node_modules/.bin/eleventy --config eleventy.config.ts",
-    "build": "npm run eleventy:build && npm run pagefind:index",
-    "serve": "rimraf _site && npm run build && npm run eleventy:build -- --serve",
+    "prebuild": "rimraf _site",
+    "build": "npm run eleventy:build",
+    "serve": "npm run build -- --serve",
     "storybook:serve": "storybook dev -p 6006",
     "storybook:build": "storybook build"
   },
@@ -58,6 +59,7 @@
     "rimraf": "^6.0.1",
     "storybook": "^9.1.1",
     "tsx": "^4.20.3",
-    "vite": "^7.1.3"
+    "vite": "^7.1.3",
+    "vite-plugin-static-copy": "^3.1.2"
   }
 }
