--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
+    "lib": ["ES2022.String", "es2022"],
     "esModuleInterop": true,
     "jsx": "react",
     "baseUrl": ".",
