--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "11ty.ts": "^0.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "lucide-react": "^0.539.0",
     "markdown-it": "^14.1.0",
     "postcss": "^8.5.6",
@@ -50,6 +51,7 @@
     "@storybook/react": "^9.1.1",
     "@storybook/react-vite": "^9.1.1",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/d3": "^7.4.3",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
