--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,14 @@
     "tailwindCSS.includeLanguages": {
         "njk": "html",
         "Nunjucks": "html"
-    }
-   
+    },
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
+    },
+    "eslint.validate": [
+        "javascript",
+        "javascriptreact",
+        "typescript",
+        "typescriptreact"
+    ]
 }
