--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "npm run eleventy:build",
     "serve": "npm run eleventy:build -- --serve",
     "storybook:serve": "storybook dev -p 6006",
-    "storybook:build": "storybook build"
+    "storybook:build": "storybook build",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix"
   },
   "repository": {
     "type": "git",
@@ -57,7 +59,14 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@types/xmldom": "^0.1.34",
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
+    "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
     "pagefind": "^1.3.0",
+    "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "rimraf": "^6.0.1",
