--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mfillmer.github.io",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "pagefind:index": "pagefind --site _site --glob \"**/*.html\"",
     "eleventy:build": "tsx ./node_modules/.bin/eleventy --config eleventy.config.ts",
@@ -49,6 +50,7 @@
     "xmldom": "^0.6.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.35.0",
     "@storybook/html-vite": "^9.1.1",
     "@storybook/react": "^9.1.1",
     "@storybook/react-vite": "^9.1.1",
@@ -63,8 +65,10 @@
     "@typescript-eslint/parser": "^8.43.0",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-html": "^8.1.3",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.4.0",
     "pagefind": "^1.3.0",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
